k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    certmanager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    acme.cert-manager.io/http01-edit-in-place: 'true'
    cert-manager.io/issue-temporary-certificate: "true"
spec: 
  tls: 
    - hosts:
        - racialdyslexia.com
        - www.racialdyslexia.com
      secretName: racialdyslexia-com
  rules:
    - host: racialdyslexia.com
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend: 
              service:
                name: client-cluster-ip-service
                port: 
                  number: 3000
          - path: /api/?(.*)
            pathType: Prefix
            backend: 
              service:
                name: server-cluster-ip-service
                port: 
                  number: 5000
    - host: www.racialdyslexia.com
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend: 
              service:
                name: client-cluster-ip-service
                port: 
                  number: 3000
          - path: /api/?(.*)
            pathType: Prefix
            backend: 
              service:
                name: server-cluster-ip-service
                port: 
                  number: 5000
